docs: fix text overflow in li tags (#6973)

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -92,7 +92,7 @@
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-size: 1rem;
-  white-space: nowrap;
+  white-space: pre-line;
   text-align: center;
 }
 
